--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
     "noImplicitAny": false,
     "noImplicitThis": false
   },
-  "include": ["./src"],
+  "include": ["src/**/*", ".storybook/**/*"],
   "exclude": ["./node_modules/**/*"]
 }
