--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "eslint-plugin-storybook": "^0.11.0",
     "husky": "^9.1.7",
     "json": "^11.0.0",
+    "pkg-size": "^2.4.0",
     "prettier": "^3.3.3",
     "pretty-quick": "^4.0.0",
     "react": "^18.0.0",
