--- a/package.json
+++ b/package.json
@@ -132,8 +132,8 @@
   },
   "peerDependencies": {
     "@react-three/fiber": ">=8.0",
-    "react": ">=18.0",
-    "react-dom": ">=18.0",
+    "react": "^18",
+    "react-dom": "^18",
     "three": ">=0.137"
   },
   "peerDependenciesMeta": {
