--- a/package.json
+++ b/package.json
@@ -131,7 +131,7 @@
     "vite-plugin-glslify": "^2.1.0"
   },
   "peerDependencies": {
-    "@react-three/fiber": ">=8.0",
+    "@react-three/fiber": "^8",
     "react": "^18",
     "react-dom": "^18",
     "three": ">=0.137"
