--- a/package.json
+++ b/package.json
@@ -57,7 +57,6 @@
     "hls.js": "^1.5.17",
     "maath": "^0.10.8",
     "meshline": "^3.3.1",
-    "react-composer": "^5.0.3",
     "stats-gl": "^2.2.8",
     "stats.js": "^0.17.0",
     "suspend-react": "^0.1.3",
@@ -65,6 +64,7 @@
     "three-stdlib": "^2.34.0",
     "troika-three-text": "^0.52.0",
     "tunnel-rat": "^0.1.2",
+    "use-sync-external-store": "^1.4.0",
     "utility-types": "^3.11.0",
     "uuid": "^9.0.1",
     "zustand": "^5.0.1"
