--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.15.0",
     "@playwright/test": "^1.45.2",
-    "@react-three/fiber": "./react-three-fiber-v9.0.0-rc.2-drei-0.tgz",
+    "@react-three/fiber": "9.0.0-rc.1",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-json": "^4.1.0",
