--- a/package.json
+++ b/package.json
@@ -130,7 +130,7 @@
     "vite-plugin-glslify": "^2.1.0"
   },
   "peerDependencies": {
-    "@react-three/fiber": "^8 || ^9.0.0-0",
+    "@react-three/fiber": "^8",
     "react": "^18",
     "react-dom": "^18",
     "three": ">=0.137"
