--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-three/drei",
-  "version": "10.0.0-rc.3",
+  "version": "0.0.0-semantic-release",
   "private": true,
   "description": "useful add-ons for react-three-fiber",
   "keywords": [
@@ -81,7 +81,7 @@
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.15.0",
     "@playwright/test": "^1.45.2",
-    "@react-three/fiber": "9.0.0-rc.10",
+    "@react-three/fiber": "^9.0.0",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-json": "^4.1.0",
@@ -129,7 +129,7 @@
     "vite-plugin-glslify": "^2.1.0"
   },
   "peerDependencies": {
-    "@react-three/fiber": "9.0.0-rc.10",
+    "@react-three/fiber": "^9.0.0",
     "react": "^19",
     "react-dom": "^19",
     "three": ">=0.159"
