feat: improve e2e tests with version-aware snapshots and artifact uploads
- Add artifact uploads to GitHub Actions workflow for test results and playwright reports
- Add runtime logging to App.tsx for three.js version, renderer, tonemap, and colorspace
- Extract three.js version from package.json peerDependencies automatically
- Update e2e tests to use version-aware snapshot naming (e.g., -159 suffix)
- Add test to verify snapshot filename matches current three.js version
- Create update-snapshot script for generating new test images
- Configure git in devcontainer to prevent line ending issues

--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "prettier": "prettier --check .",
     "prettier-fix": "prettier --write .",
     "test": "yarn eslint:ci && yarn typecheck && yarn prettier && (cd test/e2e; ./e2e.sh)",
+    "test:report": "cd test/e2e && npx playwright show-report",
+    "test:update-snapshot": "cd test/e2e && ./update-snapshot.sh",
     "typecheck": "tsc --noEmit --emitDeclarationOnly false --strict --jsx react",
     "typegen": "tsc --emitDeclarationOnly",
     "storybook": "cross-env NODE_OPTIONS=\"--openssl-legacy-provider\" storybook dev -p 6006",
