--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,7 +5,7 @@
   },
   "waitFor": "onCreateCommand",
   "updateContentCommand": "yarn install",
-  "onCreateCommand": "git config core.autocrlf false && git config core.eol lf",
+  "onCreateCommand": "git config core.autocrlf input && git config core.eol lf",
   "postCreateCommand": "sudo corepack enable && sudo apt-get update && sudo apt-get install -y libnss3 libnspr4 libdbus-1-3 libatk1.0-0t64 libatk-bridge2.0-0t64 libcups2t64 libdrm2 libatspi2.0-0t64 libxcomposite1 libxdamage1 libxfixes3 libxrandr2 libgbm1 libxkbcommon0 libasound2t64 fonts-unifont || sudo yarn playwright install-deps chromium",
   "postAttachCommand": "yarn storybook -- --port 6006",
   "customizations": {
