--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "prettier": "prettier --check .",
     "prettier-fix": "prettier --write .",
     "test": "yarn eslint:ci && yarn typecheck && yarn prettier && (cd test/e2e; ./e2e.sh)",
-    "test:report": "cd test/e2e && npx playwright show-report",
+    "test:report": "cross-env PLAYWRIGHT_HTML_REPORT=test/e2e/playwright-report npx playwright show-report",
     "test:update-snapshot": "cd test/e2e && ./update-snapshot.sh",
     "typecheck": "tsc --noEmit --emitDeclarationOnly false --strict --jsx react",
     "typegen": "tsc --emitDeclarationOnly",
