--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
     "stats.js": "^0.17.0",
     "suspend-react": "^0.1.3",
     "three-mesh-bvh": "^0.8.3",
-    "three-stdlib": "^2.35.6",
+    "three-stdlib": "^2.36.1",
     "troika-three-text": "^0.52.4",
     "tunnel-rat": "^0.1.2",
     "use-sync-external-store": "^1.4.0",
@@ -119,7 +119,7 @@
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.15.0",
     "@playwright/test": "^1.45.2",
-    "@react-three/fiber": "^9.0.0",
+    "@react-three/fiber": "file:./lib/react-three-fiber-10.0.0-alpha.0.tgz",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-json": "^4.1.0",
@@ -163,7 +163,7 @@
     "vite-plugin-glslify": "^2.1.0"
   },
   "peerDependencies": {
-    "@react-three/fiber": "^9.0.0",
+    "@react-three/fiber": ">=9.0.0",
     "react": "^19",
     "react-dom": "^19",
     "three": ">=0.182"
