--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "@storybook/react-vite": "^9.1.2",
     "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.2",
+    "@types/seedrandom": "^3",
     "@types/three": "^0.159.0",
     "@typescript-eslint/eslint-plugin": "^8.15.0",
     "@typescript-eslint/parser": "^8.15.0",
@@ -116,6 +117,7 @@
     "rollup-plugin-glslify": "^1.3.0",
     "rollup-plugin-multi-input": "^1.5.0",
     "rollup-plugin-terser": "^7.0.2",
+    "seedrandom": "^3.0.5",
     "semantic-release": "^24.2.0",
     "serve": "^14.2.4",
     "storybook": "^9.1.2",
