--- a/package.json
+++ b/package.json
@@ -74,7 +74,11 @@
     "eslint:ci": "eslint .",
     "prettier": "prettier --check .",
     "prettier-fix": "prettier --write .",
-    "test": "yarn eslint:ci && yarn typecheck && yarn prettier && (cd test/e2e; ./e2e.sh 0.180)",
+    "test": "yarn test:lint && yarn test:bundles && yarn test:canary",
+    "test:lint": "yarn eslint:ci && yarn typecheck && yarn prettier",
+    "test:bundles": "node scripts/verify-bundles.js",
+    "test:canary": "vitest run --config vitest.config.ts",
+    "test:e2e": "cd test/e2e && ./e2e.sh",
     "typecheck": "tsc --noEmit --emitDeclarationOnly false --strict --jsx react",
     "typegen": "tsc --emitDeclarationOnly",
     "storybook": "cross-env NODE_OPTIONS=\"--openssl-legacy-provider\" storybook dev -p 6006",
