--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@react-three/drei",
   "version": "0.0.0-semantic-release",
   "private": true,
+  "type": "module",
   "description": "useful add-ons for react-three-fiber",
   "keywords": [
     "react",
@@ -78,6 +79,7 @@
     "test:lint": "yarn eslint:ci && yarn typecheck && yarn prettier",
     "test:bundles": "node scripts/verify-bundles.js",
     "test:canary": "vitest run --config vitest.config.ts",
+    "test:parity": "playwright test --config=playwright.parity.config.ts",
     "test:e2e": "cd test/e2e && ./e2e.sh",
     "typecheck": "tsc --noEmit --emitDeclarationOnly false --strict --jsx react",
     "typegen": "tsc --emitDeclarationOnly",
@@ -135,6 +137,7 @@
     "@storybook/addon-docs": "^10.1.11",
     "@storybook/addon-vitest": "^10.1.11",
     "@storybook/react-vite": "^10.1.11",
+    "@types/pngjs": "^6.0.5",
     "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.2",
     "@types/three": "^0.182.0",
@@ -156,7 +159,8 @@
     "husky": "^9.1.7",
     "json": "^11.0.0",
     "obuild": "^0.4.9",
-    "playwright": "^1.57.0",
+    "pixelmatch": "^7.1.0",
+    "pngjs": "^7.0.0",
     "prettier": "^3.3.3",
     "pretty-quick": "^4.0.0",
     "react": "^19.0.0",
