--- a/package.json
+++ b/package.json
@@ -70,28 +70,28 @@
   },
   "scripts": {
     "build": "rimraf dist && yarn typegen && obuild && yarn copy && yarn copy:native",
-    "prepare": "husky",
-    "eslint": "eslint --fix .",
-    "eslint:ci": "eslint .",
-    "prettier": "prettier --check .",
-    "prettier-fix": "prettier --write .",
-    "test": "yarn test:lint && yarn test:bundles && yarn test:canary",
-    "test:lint": "yarn eslint:ci && yarn typecheck && yarn prettier",
-    "test:bundles": "node scripts/verify-bundles.js",
-    "test:canary": "vitest run --config vitest.config.ts",
-    "test:parity": "playwright test --config=playwright.parity.config.ts",
-    "test:e2e": "cd test/e2e && ./e2e.sh",
-    "typecheck": "tsc --noEmit --emitDeclarationOnly false --strict --jsx react",
-    "typegen": "tsc --emitDeclarationOnly",
-    "storybook": "cross-env NODE_OPTIONS=\"--openssl-legacy-provider\" storybook dev -p 6006",
     "build-storybook": "cross-env NODE_OPTIONS=\"--openssl-legacy-provider\" storybook build",
     "copy": "copyfiles package.json README.md LICENSE dist && json -I -f dist/package.json -e \"this.private=false; this.devDependencies=undefined; this.optionalDependencies=undefined; this.scripts=undefined; this.husky=undefined; this.prettier=undefined; this.jest=undefined; this['lint-staged']=undefined;\"",
     "copy:native": "copyfiles -u 2 src/native/package.json dist/native",
-    "release": "semantic-release",
+    "docs:generate": "ts-node scripts/generate-docs.ts",
+    "docs:generate:watch": "ts-node scripts/generate-docs.ts --watch",
+    "eslint": "eslint --fix .",
+    "eslint:ci": "eslint .",
     "examples": "yarn --cwd examples dev",
     "examples:webgpu": "yarn --cwd examples dev:webgpu",
-    "docs:generate": "ts-node scripts/generate-docs.ts",
-    "docs:generate:watch": "ts-node scripts/generate-docs.ts --watch"
+    "prepare": "husky",
+    "prettier": "prettier --check .",
+    "prettier-fix": "prettier --write .",
+    "release": "semantic-release",
+    "storybook": "cross-env NODE_OPTIONS=\"--openssl-legacy-provider\" storybook dev -p 6006",
+    "test": "yarn test:lint && yarn test:bundles && yarn test:canary",
+    "test:bundles": "node scripts/verify-bundles.js",
+    "test:canary": "vitest run --config vitest.config.ts",
+    "test:e2e": "cd test/e2e && ./e2e.sh",
+    "test:lint": "yarn eslint:ci && yarn typecheck && yarn prettier",
+    "test:parity": "playwright test --config=playwright.parity.config.ts",
+    "typecheck": "tsc --noEmit --emitDeclarationOnly false --strict --jsx react",
+    "typegen": "tsc --emitDeclarationOnly"
   },
   "dependencies": {
     "@babel/runtime": "^7.26.0",
