--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,7 @@
       "@experimental/*": ["./src/experimental/*"],
       "@utils/*": ["./src/utils/*"],
       "@sb/*": ["./.storybook/*"],
-      "drei": ["./.storybook/drei-exports.ts"]
+      "drei": ["./.storybook/drei-barrel.ts"]
     }
   },
   "include": ["./src", "./.storybook"],
