--- a/package.json
+++ b/package.json
@@ -119,7 +119,7 @@
     "@babel/preset-typescript": "^7.26.0",
     "@chromatic-com/storybook": "^4.1.3",
     "@playwright/test": "^1.45.2",
-    "@react-three/fiber": "file:./lib/react-three-fiber-10.0.0-alpha.0.tgz",
+    "@react-three/fiber": "^10.0.0-alpha.0",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-json": "^4.1.0",
