--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,10 @@ __diff_output__
 # IDE/editor files
 .idea
 .vscode
-.claude/settings.local.json
+
+# Claude Code
+.claude/
+CLAUDE.md
 
 # Package/lock files
 package-lock.json
