Feat: fix endings (#2616)
* fix: bundle requires browser output in platform (#2608)

* fix: bundle requires browser output in platform

* fix: rolldown issues

* fix: finalize rollup

* chore: prettier

* chore: prettier

* fix: adjust root name for better local linking. Dist folder package confused pnpm

* fix: update lockfile for ci

* fix: update tests for unbuild

* fix: simplified canary

* fix: package name copying

* feat: cleaned up docs, please god trigger a push

* feat: actual push, I hate git

* feat: prettier changes

* feat: proper file endings (#2615)

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,10 @@ __diff_output__
 .vscode
 .claude/settings.local.json
 
+# Claude Code
+.claude/
+CLAUDE.md
+
 # Package/lock files
 package-lock.json
 yarn-error.log
