fix: Update types for segments. closes: #2561

--- a/examples/tsconfig.json
+++ b/examples/tsconfig.json
@@ -38,7 +38,8 @@
       "@webgpu/*": ["../src/webgpu/*"],
       "@external/*": ["../src/external/*"],
       "@experimental/*": ["../src/experimental/*"],
-      "@utils/*": ["../src/utils/*"]
+      "@utils/*": ["../src/utils/*"],
+      "@lib/*": ["../lib/*"]
     }
   },
   "include": ["src", "../src"]
