--- a/package.json
+++ b/package.json
@@ -102,7 +102,6 @@
     "stats.js": "^0.17.0",
     "suspend-react": "^0.1.3",
     "three-mesh-bvh": "^0.8.3",
-    "three-stdlib": "^2.36.1",
     "troika-three-text": "^0.52.4",
     "tunnel-rat": "^0.1.2",
     "use-sync-external-store": "^1.4.0",
@@ -175,7 +174,7 @@
     "vitest": "^4.0.16"
   },
   "peerDependencies": {
-    "@react-three/fiber": ">=9.0.0",
+    "@react-three/fiber": ">=10.0.0-alpha.2",
     "react": "^19",
     "react-dom": "^19",
     "three": ">=0.182"
