--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -11,8 +11,9 @@ concurrency:
 
 jobs:
   build:
-    uses: pmndrs/docs/.github/workflows/build.yml@v2
+    uses: pmndrs/docs/.github/workflows/build.yml@3
     with:
+      docker_tag: '3'
       mdx: 'docs'
       libname: 'Drei'
       libname_short: 'drei'
